Using the more efficient valueOf() method
git-svn-id: https://svn.apache.org/repos/asf/incubator/pivot/trunk@802059 13f79535-47bb-0310-9956-ffa450edef68